--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -2,12 +2,14 @@
 	<head>
 		<title>Sign-Up Page</title>
 		<script language="JavaScript" type="text/javascript" src="../js/signup.js"></script>
+		<link rel="stylesheet" href="../css/signup.css">
 		
 	</head>
 	<body>
 		
 		<img src="../images/logo-social.jpg" width="100" height="100"><br><br><br>
 		<button onclick="window.location = '../index.html';">Home</button>
+		<div id ="id1">
 		<div id ="errors"></div>
 		<div id ="success"></div>
 		
@@ -39,6 +41,7 @@
 		<button type = "button" onclick="validateSignup();">Sign Up</button>
 		<button type = "button" onclick="window.location = '../html/sign-up.html';">Clear fields</button>
 		</form>
+		</div>
 		
 	</body>
 
